fixed sing post sidebar overflow

--- a/sass/site/_posts.scss
+++ b/sass/site/_posts.scss
@@ -104,3 +104,7 @@
     }
    
 }
+
+.single-post-sidebar {
+    overflow: hidden;
+}
